# mcp-youtrack

./: .env.example  .gitignore  README.md  interactive_client.py  pyproject.toml
mcp_youtrack/: __init__.py  interactive.py  main.py  mcp_env.py  mcp_server.py  mcp_server_class.py  run_interactive.py
tests/: __init__.py  test_issue_details.py  test_issue_details_integration.py  test_mcp_server.py  test_mcp_server_integration.py
